--- a/styles.scss
+++ b/styles.scss
@@ -106,174 +106,6 @@ header {
   }
 }
 
-.user_interface {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-  padding: 20px 0;
-  position: relative;
-  /*.btn {
-    display: flex;
-    justify-content: center;
-    button {
-      padding: 5px 20px;
-      cursor: pointer;
-    }
-  }
-  .appear {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    padding-top: 20px;
-  }*/
-
-  .website_ui {
-  
-    .website {
-      width: 100%;
-      display: flex;
-      align-items: center;
-      flex-direction: column;
-      background-color: rgb(255, 255, 255);
-      padding-bottom: 5rem;
-      .img {
-        width: 70%;
-        display: flex;
-        justify-content: center;
-        img {
-          width: 100%;
-          border-radius: 10px;
-        }
-      }
-    }
-  }
-
-  .mobile {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: rgb(248, 240, 255);
-    width: 100%;
-    .label {
-      padding: 3rem;
-    }
-    .image {
-      width: 50%;
-      img {
-        width: 100%;
-      }
-    }
-  }
-
-  //shift + alt + a
-  /*.container {
-    display: flex;
-    justify-content: space-between;
-    width: 70%;
-    .edit_buttons {
-      text-align: center;
-      .edit {
-        display: flex;
-        align-items: center;
-        padding: 20px 0;
-      }
-      .choice_buttons {
-        div {
-          margin: 5px 0;
-        }
-      }
-      #minus, #add, .buy, .add_cart {
-        margin: 0 10px;
-        padding: 5px 10px;
-        background-color: black;
-        color: white;
-        font-size: 17px;
-        font-weight: 800;
-        border-radius: 4px;
-        cursor: pointer;
-      }
-    }
-  }
-
-  .background {
-    width: 100%;
-    height: 99.6vh;
-    background-color: rgba(0, 0, 0, 0.2);
-    display: none;
-    position: absolute;
-    padding: 0;
-    margin: 0;
-    .notif {
-      display: flex;
-      justify-content: center;
-      flex-direction: column;
-      padding: 20px;
-      position: absolute;
-      left: 50%;
-      top: 50%;
-      transform: translate(-50%, -50%);
-      background-color: rgba(245, 240, 255, 0.95);
-      box-shadow: 0 0 10px rgba(245, 240, 255, 0.95);
-      border-radius: 5px;
-      .cancel {
-        text-align: end;
-        padding-bottom: 20px;
-        cursor: pointer;
-      }
-    }
-  }*/
-}
-
-.web_dev {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding-bottom: 3rem;
-  .offer {
-    display: flex;
-    align-items: center;
-    position: relative;
-    .heading {
-      margin-left: 30px;
-      width: 40%;
-      h3 {
-        font-size: 40px;
-        line-height: 40px;
-        span {
-          font-size: 20px;
-          font-weight: 300;
-        }
-      }
-    }
-    .image {
-      width: 50%;
-      img {
-        width: 100%;
-      }
-    }
-  }
-
-  .right_of {
-    flex-direction: row-reverse;
-  }
-}
-
-.hot {
-  position: relative;
-  .gallery {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    img {
-      width: 45%;
-      margin: 0 5px 5px;
-      box-shadow: 0 0 5px rgb(248, 240, 255);
-    }
-  }
-}
-
 footer {
   background-color: rgb(248, 240, 255);
   padding: 10px 0 50px;
@@ -317,6 +149,172 @@ footer {
   }
 }
 
+.services {
+  .user_interface {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px 0;
+    position: relative;
+    /*.btn {
+      display: flex;
+      justify-content: center;
+      button {
+        padding: 5px 20px;
+        cursor: pointer;
+      }
+    }
+    .appear {
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+      padding-top: 20px;
+    }*/
+  
+    .website_ui {
+    
+      .website {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        background-color: rgb(255, 255, 255);
+        padding-bottom: 5rem;
+        .img {
+          width: 70%;
+          display: flex;
+          justify-content: center;
+          img {
+            width: 100%;
+            border-radius: 10px;
+          }
+        }
+      }
+    }
+  
+    .mobile {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: rgb(248, 240, 255);
+      width: 100%;
+      .label {
+        padding: 3rem;
+      }
+      .image {
+        width: 50%;
+        img {
+          width: 100%;
+        }
+      }
+    }
+  
+    //shift + alt + a
+    /*.container {
+      display: flex;
+      justify-content: space-between;
+      width: 70%;
+      .edit_buttons {
+        text-align: center;
+        .edit {
+          display: flex;
+          align-items: center;
+          padding: 20px 0;
+        }
+        .choice_buttons {
+          div {
+            margin: 5px 0;
+          }
+        }
+        #minus, #add, .buy, .add_cart {
+          margin: 0 10px;
+          padding: 5px 10px;
+          background-color: black;
+          color: white;
+          font-size: 17px;
+          font-weight: 800;
+          border-radius: 4px;
+          cursor: pointer;
+        }
+      }
+    }
+  
+    .background {
+      width: 100%;
+      height: 99.6vh;
+      background-color: rgba(0, 0, 0, 0.2);
+      display: none;
+      position: absolute;
+      padding: 0;
+      margin: 0;
+      .notif {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        padding: 20px;
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        background-color: rgba(245, 240, 255, 0.95);
+        box-shadow: 0 0 10px rgba(245, 240, 255, 0.95);
+        border-radius: 5px;
+        .cancel {
+          text-align: end;
+          padding-bottom: 20px;
+          cursor: pointer;
+        }
+      }
+    }*/
+  }
+  
+  .web_dev {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 3rem;
+    .offer {
+      display: flex;
+      align-items: center;
+      position: relative;
+      .heading {
+        margin-left: 30px;
+        width: 40%;
+        h3 {
+          font-size: 40px;
+          line-height: 40px;
+          span {
+            font-size: 20px;
+            font-weight: 300;
+          }
+        }
+      }
+      .image {
+        width: 50%;
+        img {
+          width: 100%;
+        }
+      }
+    }
+  }
+  
+  .hot {
+    position: relative;
+    .gallery {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      img {
+        width: 45%;
+        margin: 0 5px 5px;
+        box-shadow: 0 0 5px rgb(248, 240, 255);
+      }
+    }
+  }
+}
+
 .portfolio {
   padding: 1rem 0;
   display: flex;
@@ -326,6 +324,8 @@ footer {
   .hero {
     display: flex;
     justify-content: center;
+    width: 100%;
+    padding: 3em 2em;
     .heading {
       border-bottom: 1px solid rgb(248, 240, 255);
       padding-bottom: 3em;
@@ -470,11 +470,10 @@ section .hero {
   .wireframe {
     padding: 10rem 0 2em;
     display: flex;
-    .text {
+    justify-content: center;
+    align-items: center;
+    .label {
       width: 50%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
     }
     .image {
       width: 50%;
@@ -491,9 +490,7 @@ section .hero {
   .redesign {
     display: flex;
     padding: 4rem 3rem;
-    flex-direction: row-reverse;
-    align-items: center;
-    .text {
+    .label {
       width: 50%;
     }
     .image {
@@ -540,15 +537,27 @@ section .hero {
   }
 }
 
+.flex {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .web_dev_sec {
   width: 100%;
   .hero {
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     img {
       width: 500px;
     }
   }
   #websites {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     .label {
       padding: 0;
     }
@@ -563,6 +572,8 @@ section .hero {
         align-items: center;
         justify-content: center;
         overflow: hidden;
+        position: relative;
+        line-height: 0%;
         p {
           position: absolute;
           z-index: 9;
@@ -588,6 +599,9 @@ section .hero {
   }
   #web3 {
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     .image_link {
       width: 100%;
       img {
@@ -599,7 +613,6 @@ section .hero {
     padding: 3rem 0;
     background-color: rgb(46, 57, 88);
     display: flex;
-    flex-direction: row-reverse;
     width: 100%;
     justify-content: center;
     align-items: center;
@@ -613,9 +626,13 @@ section .hero {
       color: white;
     }
   }
+  #front_end {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
   #rebuild {
     display: flex;
-    flex-direction: row-reverse;
     align-items: center;
     justify-content: center;
     background-color: rgb(248, 240, 255);
@@ -634,13 +651,16 @@ section .hero {
   #call_to_action {
     text-align: center;
     padding: 7em 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     .web_dev_options {
       display: flex;
       justify-content: center;
     }
   }
 }
-//stopped at web dev section #wordpress
+//stopped at #services 1250 - 500
 @media (max-width: 1250px) {
   .label {
     h2 {
@@ -683,131 +703,366 @@ section .hero {
   .web_dev_sec #websites .types .type {
     width: 300px;
   }
-  @media (max-width: 1000px) {
-    .web_dev_sec {
-      .label {
-        margin-right: 1rem;
+}
+
+@media (max-width: 1000px) {
+  .web_dev_sec {
+    .label {
+      margin-right: 1rem;
+    }
+    #call_to_action .web_dev_options {
+      flex-direction: column;
+      align-items: center;
+      a {
+        margin: 2px 0;
       }
-      #call_to_action .web_dev_options {
-        flex-direction: column;
-        align-items: center;
-        a {
-          margin: 2px 0;
-        }
+    }
+    #web3 {
+      .image_link {
+        margin-right: 0;
       }
-      .image_link{
-        margin-right: 1rem;
+    }
+    .image_link{
+      margin-right: 1rem;
+      img {
+        width: 100%;
+      }
+    }
+  }
+}
+
+@media (max-width: 900px) {
+  .label {
+    padding: 3em 0;
+    h2 {
+      font-size: 30px;
+      line-height: 30px;
+      span {
+        font-size: 18px;
+      }
+    }
+  }
+  p {
+    font-size: 15px;
+  }
+  .portfolio {
+    .web_features {
+      padding: 0 0 2em;
+      .slide .feature {
+        margin: 0 15px;
         img {
-          width: 100%;
+          width: 60px;
+        }
+        p {
+          font-size: 13px;
         }
       }
     }
-    @media (max-width: 900px) {
-      .label {
-        padding: 3em 0;
-        h2 {
-          font-size: 30px;
-          line-height: 30px;
-          span {
-            font-size: 18px;
-          }
+    .contacts {
+      padding: 3rem 0;
+      .socials .box img {
+        width: 180px;
+        height: 250px;
+      }
+    }
+  }
+  .services .user_interface .website_ui .website .img {
+    width: 90%;
+  }
+  .ui {
+    .image img {
+      width: 100%;
+    }
+    .ui_choice {
+      padding: 1rem;
+      .images {
+        display: none;
+      }
+    }
+  }
+  .web_dev_sec {
+    #call_to_action {
+      padding: 4em;
+    }
+    #rebuild {
+      padding: 2em 0;
+    }
+  }
+  footer {
+    font-size: 12px;
+    width: 100%;
+    padding: 10px 30px;
+    .desc {
+      margin: 0 30px;
+      padding: 7px 0;
+    }
+    .quick_links {
+      padding: 25px 0;
+      .links {
+        margin: 0 25px;
+        a {
+          font-size: 14px;
+          margin: 1px 0;
         }
       }
-      p {
-        font-size: 15px;
+    }
+    .bottom {
+      padding: 3px 0;
+    }
+  }
+}
+
+@media (max-width: 670px) {
+  .label {
+    padding: 3em 1em;
+    h2 {
+      font-size: 25px;
+      line-height: 30px;
+      span {
+        font-size: 18px;
       }
-      .portfolio {
-        .web_features {
-          padding: 0 0 2em;
-          .slide .feature img {
-            width: 70px;
-          }
-        }
-      
-        .contacts {
-          padding: 3rem 0;
-          .socials .box img {
-            width: 180px;
-            height: 250px;
-          }
-        }
+    }
+    p {
+      width: 100%;
+    }
+  }
+  .label, .web_dev_sec #rebuild .label, #wordpress .label {
+    width: 70%;
+  }
+  p {
+    font-size: 14px;
+  }
+  .w_pic {
+    flex-direction: column;
+    div {
+      width: 100%;
+    }
+  }
+  .space p {
+    font-size: 14px;
+    text-align: center;
+  }
+  .portfolio {
+    .web_features .slide{
+      flex-wrap: wrap;
+      justify-content: center;
+      .feature {
+        margin: 5px 15px;
       }
-      .services .user_interface .website_ui .website .img {
-        width: 90%;
-      }
-      .ui {
-        .image img {
-          width: 100%;
-        }
-        .ui_choice {
-          padding: 1rem;
-          .images {
-            display: none;
-          }
-        }
-      }
-      .web_dev_sec {
-        #call_to_action {
-          padding: 4em;
-        }
-        #rebuild {
-          padding: 2em 0;
-        }
-      }
-      footer {
-        font-size: 12px;
-        width: 100%;
-        padding: 10px 30px;
-        .desc {
-          margin: 0 30px;
-          padding: 7px 0;
-        }
-        .quick_links {
-          padding: 25px 0;
-          .links {
-            margin: 0 25px;
-            a {
-              font-size: 14px;
-              margin: 1px 0;
-            }
-          }
-        }
-        .bottom {
-          padding: 3px 0;
-        }
-      }
-      @media (max-width: 670px) {
-        .label {
-          h2 {
-            font-size: 30px;
+    }
+  }
+  .services {
+    .user_interface .mobile .image {
+      width: 80%;
+    }
+    .web_dev {
+      .offer {
+        .heading {
+          text-align: center;
+          h3 {
+            font-size: 25px;
             line-height: 30px;
             span {
               font-size: 18px;
             }
           }
         }
-        p {
-          font-size: 14px;
+        .image {
+          width: 80%;
+          padding: 2em 0;
         }
-        .w_pic {
-          flex-direction: column;
-        }
-        .web_dev_sec #call_to_action .web_dev_options a {
-          font-size: 16px;
-        }
-        footer {
-          .quick_links {
-            flex-direction: column;
-            text-align: center;
-            .links {
-              margin: 15px 0;
-              p{
-                margin: 0;
-              }
-            }
-          }
+        &:last-child {
+          flex-direction: column-reverse;
+          padding: 2em 0;
         }
       }
     }
+    .hot .gallery img {
+      width: 100%;
+      margin: 0;
+    }
+  }
+  .ui .wireframe,  .ui .redesign{
+    flex-direction: column;
+    align-items: center;
+    .label {
+      width: 70%;
+    }
+    .image {
+      width: 100%;
+    }
+  }
+  .web_dev_sec {
+    .hero img {
+      width: 100%;
+    }
+    #websites .types .type p {
+      top: 50%;
+      transform: translateY(-50%);
+      text-align: center;
+    }
+    #rebuild .image_link {
+      width: 80%;
+    }
+    #wordpress .image_link {
+      width: 60%;
+    }
+  }
+  #call_to_action .options a, .ui_choice .ui_btn a {
+    font-size: 16px;
+  }
+  footer {
+    .quick_links {
+      flex-direction: column;
+      text-align: center;
+      .links {
+        margin: 15px 0;
+        p{
+          margin: 0;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 500px) {
+  .label {
+    h2 {
+      font-size: 20px;
+      line-height: 22px;
+      span {
+        font-size: 16px;
+      }
+    }
+  }
+  p, a{
+    font-size: 13px;
+  }
+  .space p {
+    font-size: 12px;
+    text-align: center;
+  }
+  .options {
+    margin-bottom: 15px;
+  }
+  .hero {
+    padding: 1rem 0;
+  }
+  .full {
+    width: 100%;
+  }
+  .portfolio {
+    width: 100%;
+    .hero {
+      flex-direction: column;
+      align-items: center;
+      padding: 3em 2em 0;
+      .heading {
+        border: none;
+        padding-bottom: 1.9em;
+        text-align: center;
+        h2 {
+          font-size: 30px;
+          line-height: 30px;
+        }
+        p {
+          margin-left: 2px;
+          line-height: 15px;
+        }
+      }
+      .par {
+        padding-bottom: 1em;
+        width: 90%;
+        padding-left: 0;
+        text-align: center;
+      }
+    }
+    .deals .count_down {
+      padding-bottom: 1rem;
+      .box {
+        margin: 0 7px;
+        h2 {
+          font-size: 25px;
+          line-height: 14px;
+          color: rgb(115, 109, 131);
+        }
+        span {
+          font-size: 13px;
+          margin-left: 3px;
+        }
+      }
+    }
+    .contacts {
+      padding: 3rem 0 0;
+    }
+  }
+  .services {
+    .user_interface .mobile .image {
+      width: 90%;
+    }
+    .web_dev {
+      .offer {
+        .heading {
+          h3 {
+            font-size: 18px;
+            line-height: 25px;
+          }
+          p {
+            margin-top: 3px;
+            line-height: 17px;
+          }
+        }
+        .image {
+          width: 90%;
+        }
+      }
+    }
+  }
+  .ui {
+    .wireframe {
+      padding: 2rem 0;
+      .text {
+        width: 70%;
+      }
+      .image {
+        width: 100%;
+      }
+    }
+    .ui_choice {
+      padding: 0 2rem 2rem;
+      text-align: center;
+      .ui_btn {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        a {
+          margin-bottom: 5px;
+        }
+      }
+    }
+    .redesign {
+      padding: 1rem;
+      .image {
+        width: 100%;
+      }
+      .label {
+        width: 70%;
+      }
+    }
+  }
+  .web_dev_sec {
+    #websites .types .type {
+      width: 100%;
+    }
+    #rebuild {
+      padding: 0 0 2em;
+    }
+    #call_to_action {
+      padding: 2em 1em;
+    }
+  }
+  footer .quick_links .links {
+    margin: 10px 0;
   }
 }
