--- a/styles.css
+++ b/styles.css
@@ -87,6 +87,7 @@ header ul li a:hover {
   background: none;
   outline: none;
   border: none;
+  opacity: 0;
 }
 
 .hamburger:after, .hamburger:before {
@@ -839,6 +840,9 @@ section .hero {
   }
   header ul {
     display: none;
+  }
+  .hamburger {
+    opacity: 1;
   }
   .label {
     padding: 3em 1em;
