--- a/styles.css
+++ b/styles.css
@@ -21,9 +21,13 @@ header {
 header .logo {
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 header .logo a {
   text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 header .logo a img {
   width: 30%;
@@ -44,6 +48,10 @@ header ul li a {
 }
 header ul li a:hover {
   color: rgb(143, 96, 255);
+}
+
+.mobile-nav {
+  display: none;
 }
 
 .hamburger {
@@ -83,7 +91,7 @@ header ul li a:hover {
 }
 
 .space {
-  height: 70px;
+  height: 60px;
   width: 100%;
   background-color: rgb(248, 240, 255);
   position: relative;
@@ -814,7 +822,7 @@ section .hero {
     display: flex;
     flex-direction: column;
     position: fixed;
-    top: 44px;
+    top: 38px;
     right: -100%;
     width: 50%;
     height: 100vh;
