--- a/styles.css
+++ b/styles.css
@@ -417,20 +417,23 @@ footer .bottom {
 }
 .portfolio .deals .claim_btn {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
-.portfolio .deals .claim_btn button {
+.portfolio .deals .claim_btn button, .portfolio .deals .claim_btn a {
   background: transparent;
   font-size: 16px;
   padding: 5px 20px;
+  margin-bottom: 20px;
   border-radius: 10px;
   font-weight: 500;
   color: rgb(115, 109, 131);
   border: 2px solid rgb(115, 109, 131);
+  text-decoration: none;
   transition: 0.4s;
   cursor: pointer;
 }
-.portfolio .deals .claim_btn button:hover {
+.portfolio .deals .claim_btn button:hover, .portfolio .deals .claim_btn a:hover {
   color: rgb(143, 96, 255);
   padding: 5px 30px;
   border: 2px solid rgb(143, 96, 255);
