--- a/style.css
+++ b/style.css
@@ -485,61 +485,13 @@ footer .bottom {
   display: none;
 }
 
-#claim_page {
-  background-color: rgba(248, 240, 255, 0.6);
-  backdrop-filter: blur(10px);
+.claim_page {
+  background-color: rgb(248, 240, 255);
   width: 100%;
   height: 100vh;
-  z-index: 999;
   position: absolute;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-#claim_page .claim_page {
-  display: flex;
-  flex-direction: column;
-  width: 50%;
-  background-color: rgba(248, 240, 255, 0.5);
-  backdrop-filter: blur(10px);
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-  padding-bottom: 50px;
-  border-radius: 30px;
-  z-index: 999;
-}
-#claim_page .claim_page #cancel {
-  display: flex;
-  justify-content: end;
-  font-size: 25px;
-  margin: 10px 30px 0 0;
-}
-#claim_page .claim_page .content {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 50px 0 20px;
-}
-#claim_page .claim_page .content .choices {
-  margin: 50px 0;
-  display: flex;
-  flex-wrap: wrap;
-}
-#claim_page .claim_page .content .choices .box {
-  width: 300px;
-  margin: 0 10px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  cursor: pointer;
-  text-decoration: none;
-  color: black;
-}
-#claim_page .claim_page .content .choices .box img {
-  width: 100%;
-  border-radius: 20px;
+  top: 0;
+  left: 0;
 }
 
 section .hero {
@@ -1142,4 +1094,4 @@ section .hero {
   }
 }
 
-/*# sourceMappingURL=styles.css.map */
+/*# sourceMappingURL=style.css.map */
