--- a/styles.scss
+++ b/styles.scss
@@ -411,6 +411,7 @@ footer {
     background-color: rgb(248, 240, 255);
     width: 100%;
     padding-bottom: 3rem;
+    position: relative;
     .claim_note {
       margin-bottom: 20px;
     }
@@ -500,6 +501,64 @@ footer {
         }
       }
     }
+  }
+}
+
+#claim_page {
+  background-color: rgba(248, 240, 255, .6);
+  backdrop-filter: blur(10px);
+  width: 100%;
+  height: 100vh;
+  z-index: 999;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  .claim_page {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    background-color: rgba(248, 240, 255, .5);
+    backdrop-filter: blur(10px);
+    box-shadow: 0 0 5px rgba(0, 0, 0, .1);
+    padding-bottom: 50px;
+    border-radius: 30px;
+    z-index: 999;
+    #cancel {
+      display: flex;
+      justify-content: end;
+      font-size: 25px;
+      margin: 10px 30px 0 0;
+    }
+    .content {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      padding: 50px 0 20px;
+      .choices {
+        margin: 50px 0;
+        display: flex;
+        flex-wrap: wrap;
+        .box {
+          width: 300px;
+          margin: 0 10px;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+          cursor: pointer;
+          text-decoration: none;
+          color: black;
+          img {
+            width: 100%;
+            border-radius: 20px;
+          }
+        }
+      }
+    }
+  
   }
 }
 
