aligning text and interaction links

--- a/styles.scss
+++ b/styles.scss
@@ -597,6 +597,7 @@ section .hero {
   }
   .redesign {
     display: flex;
+    align-items: center;
     padding: 4rem 3rem;
     .label {
       width: 50%;
