--- a/styles.scss
+++ b/styles.scss
@@ -713,6 +713,7 @@ section .hero {
     align-items: center;
     .image_link {
       width: 100%;
+      margin: 0;
       img {
         width: 100%;
       }
