--- a/styles.css
+++ b/styles.css
@@ -443,6 +443,59 @@ footer .bottom {
   border: 2px solid rgb(143, 96, 255);
   transform: scale(1.03);
 }
+.portfolio .discount {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 50px 0 20px;
+}
+.portfolio .discount h2 {
+  color: rgb(115, 109, 131);
+}
+.portfolio .discount .choices {
+  margin: 50px 0;
+  display: flex;
+  flex-wrap: wrap;
+}
+.portfolio .discount .choices .outer {
+  background-color: rgb(248, 240, 255);
+  box-shadow: 0 0 5px rgba(115, 109, 131, 0.3);
+  padding: 10px;
+  border-radius: 20px;
+  margin: 0 20px;
+}
+.portfolio .discount .choices .outer .price div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 5px 0 30px;
+}
+.portfolio .discount .choices .outer .price div p span {
+  text-decoration: line-through;
+}
+.portfolio .discount .choices .outer .price div #price {
+  margin-left: 5px;
+  font-size: 20px;
+  font-weight: 600;
+  color: rgb(142, 133, 167);
+}
+.portfolio .discount .choices .outer .box {
+  width: 300px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  text-decoration: none;
+  color: black;
+}
+.portfolio .discount .choices .outer .box img {
+  width: 100%;
+  border-radius: 20px;
+  box-shadow: 0 0 5px rgba(115, 109, 131, 0.3);
+}
 .portfolio .contacts {
   padding: 5rem 0;
 }
@@ -483,63 +536,6 @@ footer .bottom {
 }
 .portfolio .contacts .socials .box:hover .black p {
   display: none;
-}
-
-#claim_page {
-  background-color: rgba(248, 240, 255, 0.6);
-  backdrop-filter: blur(10px);
-  width: 100%;
-  height: 100vh;
-  z-index: 999;
-  position: absolute;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-#claim_page .claim_page {
-  display: flex;
-  flex-direction: column;
-  width: 50%;
-  background-color: rgba(248, 240, 255, 0.5);
-  backdrop-filter: blur(10px);
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-  padding-bottom: 50px;
-  border-radius: 30px;
-  z-index: 999;
-}
-#claim_page .claim_page #cancel {
-  display: flex;
-  justify-content: end;
-  font-size: 25px;
-  margin: 10px 30px 0 0;
-}
-#claim_page .claim_page .content {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 50px 0 20px;
-}
-#claim_page .claim_page .content .choices {
-  margin: 50px 0;
-  display: flex;
-  flex-wrap: wrap;
-}
-#claim_page .claim_page .content .choices .box {
-  width: 300px;
-  margin: 0 10px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  cursor: pointer;
-  text-decoration: none;
-  color: black;
-}
-#claim_page .claim_page .content .choices .box img {
-  width: 100%;
-  border-radius: 20px;
 }
 
 section .hero {
