--- a/styles.css
+++ b/styles.css
@@ -457,10 +457,12 @@ footer .bottom {
 .portfolio .discount .choices {
   margin: 50px 0;
   display: flex;
+  justify-content: center;
   flex-wrap: wrap;
 }
 .portfolio .discount .choices .outer_most {
   text-align: center;
+  margin: 20px;
 }
 .portfolio .discount .choices .outer_most .heading {
   font-size: 20px;
@@ -473,7 +475,6 @@ footer .bottom {
   box-shadow: 0 0 5px rgba(115, 109, 131, 0.3);
   padding: 10px;
   border-radius: 20px;
-  margin: 0 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
