--- a/styles.css
+++ b/styles.css
@@ -904,13 +904,11 @@ section .hero {
     width: 50%;
     height: 100vh;
     z-index: 10000;
-    padding-left: 30px;
     transition: 0.4s;
     background-color: rgba(255, 255, 255, 0.5);
     backdrop-filter: blur(20px);
   }
   .mobile-nav a {
-    margin-bottom: 30px;
     text-decoration: none;
     font-size: 15px;
     font-weight: 500;
@@ -918,6 +916,7 @@ section .hero {
     transition: 0.4s;
     line-height: 20px;
     width: 100%;
+    padding: 15px 0 15px 30px;
   }
   .mobile-nav a:hover {
     color: rgb(143, 96, 255);
