--- a/styles.scss
+++ b/styles.scss
@@ -954,12 +954,10 @@ section .hero {
     width: 50%;
     height: 100vh;
     z-index: 10000;
-    padding-left: 30px;
     transition: .4s;
     background-color: rgba(255, 255, 255, .5);
     backdrop-filter: blur(20px);
     a {
-      margin-bottom: 30px;
       text-decoration: none;
       font-size: 15px;
       font-weight: 500;
@@ -967,6 +965,7 @@ section .hero {
       transition: .4s;
       line-height: 20px;
       width: 100%;
+      padding: 15px 0 15px 30px;
       &:hover {
         color:rgb(143, 96, 255);
       }
