--- a/styles.scss
+++ b/styles.scss
@@ -469,6 +469,13 @@ footer {
       color: rgb(115, 109, 131);
       font-weight: 600;
     }
+    .directions {
+      line-height: 21px;
+    }
+    .first {
+      color: rgba(115, 109, 131, .7);
+      font-weight: 600;
+    }
     .choices {
       margin: 50px 0;
       display: flex;
