--- a/styles.css
+++ b/styles.css
@@ -398,7 +398,7 @@ footer .bottom {
   padding-bottom: 3rem;
   position: relative;
 }
-.portfolio .deals .claim_note {
+.portfolio .deals #claim_note {
   margin-bottom: 20px;
 }
 .portfolio .deals .count_down {
@@ -456,6 +456,7 @@ footer .bottom {
 }
 .portfolio .discount .directions {
   line-height: 21px;
+  display: none;
 }
 .portfolio .discount .first {
   color: rgba(115, 109, 131, 0.7);
